Fixed transaction modal on mobile

--- a/src/component/TransactionModal/TransactionModal.module.css
+++ b/src/component/TransactionModal/TransactionModal.module.css
@@ -101,3 +101,14 @@
 		font-size: 0.85rem;
 	}
 }
+
+@media (max-width: 500px) {
+	.payment-details {
+		flex-direction: column;
+		align-items: center;
+	}
+	.payment-values {
+		width: auto;
+		align-self: stretch;
+	}
+}
